last changes for storing

--- a/robocup_bringup/config/storing_groceries/storing_params.yaml
+++ b/robocup_bringup/config/storing_groceries/storing_params.yaml
@@ -7,19 +7,19 @@
     offer_pose: "offer"
     waypoints_names: ["entrance", "table", "secure_pick", "cabinet", "secure_place"]
     # ARENA C:
-    # waypoints:
-    #   entrance: [-0.711, -0.612, -3.078]
-    #   table: [14.965, -5.944, 1.752]
-    #   secure_pick: [5.567, 2.208, 1.9218]
-    #   cabinet: [12.921, -3.735, -2.987]
-    #   secure_place: [4.968, 2.2, 1.824]
-    # ARENA B:
-    waypoints: # [x, y, yaw] only 3 numbers!!
+    waypoints:
       entrance: [-0.711, -0.612, -3.078]
-      table: [-11.251, -2.897, -0.245]
+      table: [14.965, -5.944, 1.752]
       secure_pick: [5.567, 2.208, 1.9218]
-      cabinet: [-8.263, -1.846, 1.239]
+      cabinet: [12.921, -3.735, -2.987]
       secure_place: [4.968, 2.2, 1.824]
+    # ARENA B:
+    # waypoints: # [x, y, yaw] only 3 numbers!!
+    #   entrance: [-0.711, -0.612, -3.078]
+    #   table: [-11.251, -2.897, -0.245]
+    #   secure_pick: [5.567, 2.208, 1.9218]
+    #   cabinet: [-8.263, -1.846, 1.239]
+    #   secure_place: [4.968, 2.2, 1.824]
 
 behaviors_main:
   ros__parameters:
