--- a/bt_nodes/configuration/package.xml
+++ b/bt_nodes/configuration/package.xml
@@ -16,6 +16,7 @@
   <depend>behaviortree_cpp_v3</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>yolov8_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
