--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -19,7 +19,7 @@
   <depend>nav2_behavior_tree</depend>
   <depend>nav2_costmap_2d</depend>
   <depend>navigation_system_interfaces</depend>
-  <depend>manipultaion_interfaces</depend>
+  <depend>manipulation_interfaces</depend>
   <depend>slam_toolbox</depend>
   
   <depend>attention_system</depend>
