--- a/bt_nodes/bt_test/package.xml
+++ b/bt_nodes/bt_test/package.xml
@@ -25,6 +25,7 @@
   <depend>tf2_ros</depend>
   <depend>hri</depend>
   <depend>perception_system_interfaces</depend>
+  <depend>ament_index_cpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
