--- a/robocup_bringup/package.xml
+++ b/robocup_bringup/package.xml
@@ -18,6 +18,7 @@
   <exec_depend>hri</exec_depend>
   <exec_depend>motion</exec_depend>
   <exec_depend>perception</exec_depend>
+  <exec_depend>launch_pal</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
